--- a/life/index.html
+++ b/life/index.html
@@ -1,6 +1,6 @@
 ---
-title: 那些年走过的地方去过路过的美景
-description: "分享那些年走过的地方去过路过的美景"
+title: 生活中的两三事
+description: "记录生活的琐碎的两三小事"
 ---
 
 <div class="main-content index-page clearfix ">
